--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>Superkvíz</title>
 	<link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="prvni()">
 
 
 	<h1>Superkvíz</h1>
